# server/api/images_api/image_name_list.go
@@ -1,0 +1,32 @@
+package images_api
+
+import (
+	"github.com/gin-gonic/gin"
+	"server/global"
+	"server/models"
+	"server/models/res"
+)
+
+type NameList struct {
+	ID   uint   `json:"id"`
+	Name string `json:"name"`
+	Path string `json:"path"`
+}
+
+// ImageNameListView
+// @Summary 获取图片名字列表
+// @Description 返回所有图片名字
+// @Tags 图片
+// @Produce json
+// @Success 200 {array} NameList
+// @Router /api/imagesName [get]
+func (ImagesApi) ImageNameListView(c *gin.Context) {
+	var imageNameList []NameList
+
+	err := global.DB.Model(models.ImageModel{}).Select("id", "name", "path").Find(&imageNameList).Error
+	if err != nil {
+		res.FailWithError(err, imageNameList, c)
+	}
+	res.OKWithData(imageNameList, c)
+	return
+}
